--- a/accueil-discord/index.html
+++ b/accueil-discord/index.html
@@ -156,7 +156,7 @@ HTML Link Tags
 
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<title>Discord NORML France</title>
+		<title>Discord UPLC France</title>
 		<link rel="stylesheet" type="text/css" media="screen" title="Default" href="v01b00.css">
 	    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -170,17 +170,17 @@ HTML Link Tags
 	<body>
 		<div class="global">
 			<div class="header">
-				<h1>Discord NORML France</h1>
+				<h1>Discord UPLC France</h1>
 				<div class="plus"></div>
 				<div class="normlFrance"></div>
 				<div class="discord"></div>
 				<hr>
 			</div>
-			<div class="link"><p><a href="https://discord.gg/JSDA9xS" title="Se connecter au Discord de NORML France">Se connecter au Discord NORML France</a></p></div>
+			<div class="link"><p><a href="https://discord.gg/JSDA9xS" title="Se connecter au Discord de UPLC France">Se connecter au Discord NORML France</a></p></div>
 			<div class="content">
 				<div class="normlFrance">
 					
-					<h2>Pourquoi NORML France ici?</h2>
+					<h2>Pourquoi UPLC France ici?</h2>
 					
 					<p>Discord est utilisé pour se réunir entre militants, sympathisants et curieux pour discuter, partager des articles, des 
 images, des vidéos à propos du chanvre et de sa régulation tout en tentant d'impliquer la société civile sur une nécessaire réforme de la politique de gestion des stupéfiants.</p>
