--- a/accueil-discord/index.html
+++ b/accueil-discord/index.html
@@ -176,7 +176,7 @@ HTML Link Tags
 				<div class="discord"></div>
 				<hr>
 			</div>
-			<div class="link"><p><a href="https://discord.gg/JSDA9xS" title="Se connecter au Discord de UPLC France">Se connecter au Discord NORML France</a></p></div>
+			<div class="link"><p><a href="https://discord.gg/JSDA9xS" title="Se connecter au Discord de UPLC France">Se connecter au Discord UPLC</a></p></div>
 			<div class="content">
 				<div class="normlFrance">
 					
