--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>Hello UPLC</h1>
 
 <a href="accueil-discord">Accueil Discord</a>
+
+<a href="https://www.developpez.com">https://www.developpez.com</a>
