--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<!DOCTYPE html>
+<html>
 <h1>Hello UPLC</h1>
+
+<a href="accueil-discord">Accueil Discord</a>
+
+<a href="https://www.developpez.com">https://www.developpez.com</a>
+</html>
