--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <h1>Hello UPLC</h1>
 
 <a href="accueil-discord">Accueil Discord</a>
+  
+<a href="https://zeroocool.github.io">Revenir à l'accueil des pages de ZerooCool</a>
 
 <a href="https://www.developpez.com">https://www.developpez.com</a>
 </html>
