--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <h1>Hello UPLC</h1>
 
-<a href="accueil-discord">Accueil Discord</a>
+<a href="https://zeroocool.github.io/unis-pour-le-climat/accueil-discord/index.html">Accueil Discord</a>
   
-<a href="https://zeroocool.github.io">Revenir à l'accueil des pages de ZerooCool</a>
+<a href="https://zeroocool.github.io/index.html">Revenir à l'accueil des pages de ZerooCool</a>
 
 <a href="https://www.developpez.com">https://www.developpez.com</a>
 </html>
