--- a/accueil-discord/index.html
+++ b/accueil-discord/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <title>Salon de discussions Discord : Unis pour le climat - Unis pour la planète.</title>
+    <meta name="apple-mobile-web-app-title" content="Salon de discussions Discord : Unis pour la planète.">
+    <meta name="application-name" content="Unis pour la planète">
+    <meta name='description' content="Unis pour la planète a pour vocation à entreprendre des actions de long terme dans le sens de la protection de l'environnement. Nous sommes convaincus que nous devons agir au plus près des acteurs-clés de la société, en mettant en oeuvre une transformation radicale des paradigmes dominants qui mettent à mal notre planète.'>
+    <meta name='keywords' content='unis, climat, planète, discord, protection de l'environnement, société'>
+    <meta name='language' content='fr'>
+    <meta name="theme-color" content="#90ee90">
 <!--
 La liste non exhaustive des balises Meta
-
-<meta charset='UTF-8'>
-<meta name='keywords' content='your, tags'>
-<meta name='description' content='150 words'>
 <meta name='subject' content='your website's subject'>
 <meta name='copyright' content='company name'>
-<meta name='language' content='ES'>
 <meta name='robots' content='index,follow'>
 <meta name='revised' content='Sunday, July 18th, 2010, 5:15 pm'>
 <meta name='abstract' content=>
@@ -51,7 +55,6 @@ La liste non exhaustive des balises Meta
 <meta http-equiv='x-dns-prefetch-control' content='off'>
 
 La liste des Balises Meta Apple
-
 <meta name="apple-mobile-web-app-title" content="My App">
 <meta name='apple-mobile-web-app-capable' content='yes'>
 <meta name='apple-touch-fullscreen' content='yes'>
@@ -69,11 +72,9 @@ La liste des Balises Meta Apple
 <link href='http://github.com/images/apple-touch-icon-57x57.png' sizes='57x57' rel='apple-touch-icon-precomposed'>
 
 Safari 9 Pinned tabs in El Capitan
-
 <link rel="mask-icon" href="website_icon.svg" color="red">
 
 Les balises Meta Internet Explorer
-
 <meta http-equiv='Page-Enter' content='RevealTrans(Duration=2.0,Transition=2)'>
 <meta http-equiv='Page-Exit' content='RevealTrans(Duration=3.0,Transition=12)'>
 <meta name='mssmarttagspreventparsing' content='true'>
@@ -91,7 +92,6 @@ Les balises Meta Internet Explorer
 <meta http-equiv='cleartype' content='on'>
 
 Windows 8 Meta Tags
-
 <meta name="application-name" content=" Contoso" />
 <meta name="msapplication-TileColor" content=" #009900" />
 <meta name="msapplication-square70x70logo" content="images/smalltile.png" />
@@ -101,17 +101,14 @@ Windows 8 Meta Tags
 <meta name="msapplication-notification" content="frequency=30; polling-uri=notifications/contoso1.xml;polling-uri2=notifications/contoso2.xml; polling-uri3=notifications/contoso3.xml" />
 
 Blog Catalog Meta Tags
-
 <meta name='blogcatalog'>
 Renseigner une ville de chalandise
 
 Micro format qui permet de renseigner une ville de chalandise. Utile lorsqu'un magasin se trouve en périphérie d'une grande ville.
-
-itemscope itemtype="http://schema.org/LocalBusiness">
+<div itemscope itemtype="http://schema.org/LocalBusiness">
 <meta itemprop="areaServed" content="nom de la ville">
 
 Rails Meta Tags
-
 <meta name='csrf-param' content='authenticity_token'>
 <meta name='csrf-token' content='/bZVwvomkAnwAI1Qd37lFeewvpOIiackk9121fFwWwc='>
 
@@ -153,12 +150,6 @@ HTML Link Tags
 <link rel='profile' href='http://gmpg.org/xfn/11'>
 -->
 
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Discord Unis pour le climat</title>
-    <meta name="apple-mobile-web-app-title" content="Portail NORML France">
-    <meta name="application-name" content="Portail NORML France">
-    <meta name="theme-color" content="#0295b6">
-    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" media="screen" title="Default" href="v01b00.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -175,17 +166,16 @@ HTML Link Tags
             <hr>
         </div>
         <div class="link">
-            <p><a href="https://discord.gg/44RPdNs" title="Se connecter au Discord de UPLC">Se connecter au Discord UPLC</a></p>
+            <p><a href="https://discord.gg/PVDc47V" title="Se connecter au Discord de UPLC">Se connecter au Discord UPLC</a></p>
         </div>
         <div class="content">
             <div class="normlFrance">
 
-                <h2>Pourquoi UPLC France ici?</h2>
+                <h2>Pourquoi Unis pour la planète sur Discord ?</h2>
 
-                <p>Discord est utilisé pour se réunir entre militants, sympathisants et curieux pour discuter, partager des articles, des images, des vidéos à propos du chanvre et de sa régulation tout en tentant d'impliquer la société civile sur une nécessaire
-                    réforme de la politique de gestion des stupéfiants.</p>
+                <p>Discord est utilisé pour se réunir entre militants, sympathisants et curieux pour discuter, partager des articles, des images, des vidéos à propos des objectifs du développement durable tout en tentant d'impliquer la société civile sur une nécessaire réforme de la politique écologique qui peine a mettre en oeuvre les réponses proposées qui profiteraient à l'ensemble de la population.</p>
 
-                <p>Différents salons permettent notamment de s'organiser et lancer des projets pour diffuser par de multiples façons les activités et la communication de <a href="http://www.norml.fr" title="NORML France">NORML France</a>.</p>
+                <p>Différents salons permettent notamment de s'organiser et de lancer des projets pour diffuser par de multiples façons les activités et la communication de <a href="http://www.unis-pour-le-climat.com" title="Unis pour le climat">Unis pour le climat</a>.</p>
 
                 <p>Rédaction de textes, traduction, graphisme, édition web, community Management, développement de site, jeux... Toutes les bonnes volontés sont les bienvenues pour soutenir les actions de <a href="http://www.norml.fr" title="NORML France">NORML France</a>.
                     N'hésitez pas à venir proposer vos compétences.</p>
@@ -202,7 +192,7 @@ HTML Link Tags
 
                 <p>Ce service est totalement gratuit et ne nécessite aucune inscription. Vous n'avez rien d'autre à faire que de choisir un nom au moment de vous connecter. Par la suite vous pourrez créer un compte conserver et personnaliser votre compte.</p>
 
-                <p>Pour accéder à <a href="https://discord.gg/44RPdNs" title="Se connecter au Discord NORML France">Discord</a>, vous pouvez le faire simplement à partir de votre navigateur.</p>
+                <p>Pour accéder à <a href="https://discord.gg/PVDc47V" title="Se connecter au Discord NORML France">Discord</a>, vous pouvez le faire simplement à partir de votre navigateur.</p>
 
                 <p>Si vous utilisez une tablette ou un smartphone, des applications sont disponibles sur l'<a href="https://itunes.apple.com/fr/app/discord-chat-for-gamers/id985746746" title="Discord sur l'Apple Store">Apple Store</a> et <a href="https://play.google.com/store/apps/details?id=com.discord"
                         title="Discord sur Google Play">Google Play</a>.</p>
