--- a/accueil-discord/index.html
+++ b/accueil-discord/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Salon de discussions Discord : Unis pour le climat - Unis pour la planète.</title>
+    <title>Unis pour le climat - Unis pour la planète.</title>
     <meta name="apple-mobile-web-app-title" content="Salon de discussions Discord : Unis pour la planète.">
     <meta name="application-name" content="Unis pour la planète">
     <meta name='description' content="Unis pour la planète a pour vocation à entreprendre des actions de long terme dans le sens de la protection de l'environnement. Nous sommes convaincus que nous devons agir au plus près des acteurs-clés de la société, en mettant en oeuvre une transformation radicale des paradigmes dominants qui mettent à mal notre planète.'>
