--- a/accueil-discord/index.html
+++ b/accueil-discord/index.html
@@ -6,9 +6,9 @@
     <title>Unis pour le climat - Unis pour la planète.</title>
     <meta name="apple-mobile-web-app-title" content="Salon de discussions Discord : Unis pour la planète.">
     <meta name="application-name" content="Unis pour la planète">
-    <meta name='description' content="Unis pour la planète a pour vocation à entreprendre des actions de long terme dans le sens de la protection de l'environnement. Nous sommes convaincus que nous devons agir au plus près des acteurs-clés de la société, en mettant en oeuvre une transformation radicale des paradigmes dominants qui mettent à mal notre planète.'>
-    <meta name='keywords' content='unis, climat, planète, discord, protection de l'environnement, société'>
-    <meta name='language' content='fr'>
+    <meta name="description" content="Unis pour la planète a pour vocation à entreprendre des actions de long terme dans le sens de la protection de l'environnement. Nous sommes convaincus que nous devons agir au plus près des acteurs-clés de la société, en mettant en oeuvre une transformation radicale des paradigmes dominants qui mettent à mal notre planète.">
+    <meta name="keywords" content="unis, climat, planète, discord, protection de l'environnement, société">
+    <meta name="language" content="fr">
     <meta name="theme-color" content="#90ee90">
 <!--
 La liste non exhaustive des balises Meta
@@ -170,36 +170,27 @@ HTML Link Tags
         </div>
         <div class="content">
             <div class="normlFrance">
-
                 <h2>Pourquoi Unis pour la planète sur Discord ?</h2>
-
                 <p>Discord est utilisé pour se réunir entre militants, sympathisants et curieux pour discuter, partager des articles, des images, des vidéos à propos des objectifs du développement durable tout en tentant d'impliquer la société civile sur une nécessaire réforme de la politique écologique qui peine a mettre en oeuvre les réponses proposées qui profiteraient à l'ensemble de la population.</p>
-
                 <p>Différents salons permettent notamment de s'organiser et de lancer des projets pour diffuser par de multiples façons les activités et la communication de <a href="http://www.unis-pour-le-climat.com" title="Unis pour le climat">Unis pour le climat</a>.</p>
-
-                <p>Rédaction de textes, traduction, graphisme, édition web, community Management, développement de site, jeux... Toutes les bonnes volontés sont les bienvenues pour soutenir les actions de <a href="http://www.norml.fr" title="NORML France">NORML France</a>.
-                    N'hésitez pas à venir proposer vos compétences.</p>
-
-                <p>Pour terminer, visitez notre site Internet <a href="http://www.unis-pour-le-climat.com/redmine" title="Visiter le site de NORML France">www.unis-pour-le-climat.com</a>, sur lequel vous trouverez de nombreuses choses à découvrir et partager
-                    !</p>
-
+                <p>Rédaction de textes, traduction, graphisme, édition web, community Management, développement de site, jeux... Toutes les bonnes volontés sont les bienvenues pour soutenir les actions de <a href="http://www.unis-pour-le-climat.com" title="Unis pour le climat">Unis pour le climat</a>. N'hésitez pas à venir proposer vos compétences.</p>
+                <p>Pour terminer, visitez notre site Internet <a href="http://www.unis-pour-le-climat.com/redmine" title="Visiter le site de Unis pour le climat.">www.unis-pour-le-climat.com/redmine</a>, sur lequel vous trouverez de nombreuses informations à découvrir et partager !</p>
             </div>
             <div class="discord">
-
                 <h2>Qu'est ce que Discord?</h2>
-
                 <p>Discord est un service de messagerie instantanée et de communication vocale comparable à Skype.</p>
-
                 <p>Ce service est totalement gratuit et ne nécessite aucune inscription. Vous n'avez rien d'autre à faire que de choisir un nom au moment de vous connecter. Par la suite vous pourrez créer un compte conserver et personnaliser votre compte.</p>
-
                 <p>Pour accéder à <a href="https://discord.gg/PVDc47V" title="Se connecter au Discord NORML France">Discord</a>, vous pouvez le faire simplement à partir de votre navigateur.</p>
-
-                <p>Si vous utilisez une tablette ou un smartphone, des applications sont disponibles sur l'<a href="https://itunes.apple.com/fr/app/discord-chat-for-gamers/id985746746" title="Discord sur l'Apple Store">Apple Store</a> et <a href="https://play.google.com/store/apps/details?id=com.discord"
-                        title="Discord sur Google Play">Google Play</a>.</p>
+                <p>Si vous utilisez une tablette ou un smartphone, des applications sont disponibles sur l'<a href="https://itunes.apple.com/fr/app/discord-chat-for-gamers/id985746746" title="Discord sur l'Apple Store">Apple Store</a> et <a href="https://play.google.com/store/apps/details?id=com.discord" title="Discord sur Google Play">Google Play</a>.</p>
             </div>
         </div>
         <hr />
     </div>
-    <!-- Source d'origine : Page discord des insoumis - Modification par Bernard Bass pour NORML France -->
+    <!--
+         Source d'origine : Page discord des insoumis.
+         Modification par Bernard Bass pour NORML France.
+         Modification par Bernard Bass pour le MdP.
+         Modification par Bernard Bass pour Unis pour le climat.
+     -->
 </body>
 </html>
